--- a/templates/activities/activity_detail.html
+++ b/templates/activities/activity_detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{{ activity.title }} - 课堂互动平台{% endblock %}
+{% block title %}{{ activity.title }} - interaction activity{% endblock %}
 
 {% block content %}
 <div class="d-flex justify-content-between align-items-center mb-4">
@@ -12,16 +12,16 @@
     <div class="btn-group">
         {% if activity.is_active %}
         <button id="stop-activity" class="btn btn-danger">
-            <i class="bi bi-stop-circle"></i> 结束活动
+            <i class="bi bi-stop-circle"></i> end Activity
         </button>
         {% else %}
         <button id="start-activity" class="btn btn-success">
             <i class="bi bi-play-circle"></i> 
-            {% if activity.started_at %}重新开始活动{% else %}开始活动{% endif %}
+            {% if activity.started_at %}restart Activity{% else %}start Activity{% endif %}
         </button>
         {% endif %}
         <button id="reset-activity" class="btn btn-outline-warning">
-            <i class="bi bi-arrow-clockwise"></i> 重置活动
+            <i class="bi bi-arrow-clockwise"></i> reset Activity
         </button>
         <a href="{{ url_for('activities.activity_results', activity_id=activity.id) }}" class="btn btn-outline-info">
             <i class="bi bi-graph-up"></i> 查看结果
